Empty div created above footer to prevent overlapping
Sine footer has absolute position fixed at bottom, when the content of the page is filled, footer may overlap with the content. To prevent this an empty div with same height of footer is created for both themes

--- a/MoinMoin/themes/basic/static/custom-less/theme.less
+++ b/MoinMoin/themes/basic/static/custom-less/theme.less
@@ -497,20 +497,11 @@ img {
 .bootstrap-tagsinput{
   display:block !important;
 }
-html {
-  position: relative;
-  min-height: 100%;
-}
-body {
-  margin-bottom: 60px;
-}
-.moin-footer{
-  bottom: 0;
-  width: 100%;
-  position: absolute;
-  padding-right: 3%;
-}
-
 #editor > dl {
   float:left !important;
+}
+.moin-footer{
+  width: 96%;
+  position: absolute;
+  bottom: 0;
 }
